Được tạo bằng Colaboratory

--- a/Data_Science_Basic.ipynb
+++ b/Data_Science_Basic.ipynb
@@ -4,9 +4,10 @@
   "metadata": {
     "colab": {
       "name": "Data Science Basic.ipynb",
+      "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPkXepAhvbzEY9whNf4asWM",
+      "authorship_tag": "ABX9TyOlYXf6UTdeZoHGQZOD1iMP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +16,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -34,7 +36,74 @@
         "id": "za7cebcTzKc-"
       },
       "source": [
-        ""
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j0SHn4bs3h29"
+      },
+      "source": [
+        "cd drive/MyDrive/Data\\ Science"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5fYwqMRE4BHT"
+      },
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4RTW__TK3yd_"
+      },
+      "source": [
+        "### Step 1: import Data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cgbSqH173wOq"
+      },
+      "source": [
+        "data = pd.read_csv(\"./chipotle.tsv\",sep=\"\\t\")\n",
+        "data.head(5)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qhsPb4HO4kaH"
+      },
+      "source": [
+        "data.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5M-PVMHU4_I-"
+      },
+      "source": [
+        "data.info()"
       ],
       "execution_count": null,
       "outputs": []
