Được tạo bằng Colaboratory

--- a/Data_Science_Basic.ipynb
+++ b/Data_Science_Basic.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMs1A7fADajjPvH2NfjBEXf",
+      "authorship_tag": "ABX9TyP2hkhXvK//FKW6AlFTFc2U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -16,7 +16,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -169,14 +170,14 @@
       "source": [
         "\n",
         "\n",
-        "1.   Conut: Tổng số lượng không có giá trị rỗng \n",
-        "1.   Unique: \n",
-        "1.   Top: Giá trị xuất hiện nhiều nhất trong một cột\n",
-        "1.   freq: Số lần xuất hiện của giá trị  Top\n",
-        "2.   Mean: Giá trị trung bình của mỗi item\n",
-        "2.   Std: Độ lệch chuẩn của Mean\n",
-        "2.   Min: Giá trị iteam xuất hiện thấp nhất\n",
-        "2.   Max: Giá trị item xuất hiện cao nhất\n",
+        "1.   **Conut**: Tổng số lượng không có giá trị rỗng \n",
+        "1.   **Unique**: Tổng giá trị khác nhau (String)\n",
+        "1.   **Top**: Giá trị xuất hiện nhiều nhất trong một cột\n",
+        "1.   **freq**: Số lần xuất hiện của giá trị  Top\n",
+        "2.   **Mean**: Giá trị trung bình của mỗi item\n",
+        "2.   **Std**: Độ lệch chuẩn của Mean\n",
+        "2.   **Min**: Giá trị iteam xuất hiện thấp nhất\n",
+        "2.   **Max**: Giá trị item xuất hiện cao nhất\n",
         "\n",
         "\n",
         "\n",
@@ -184,12 +185,254 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "tB4GCDa8aC1R"
+        "id": "G-9_yS61gbcd"
       },
       "source": [
-        ""
+        "## loc and iloc"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_cI5J6qggbLr"
+      },
+      "source": [
+        "data.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2QUgfuC4gprJ"
+      },
+      "source": [
+        "data.loc[(data[\"item_name\"]==\"Nantucket Nectar\") & (data['quantity']==2)] "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qa-O6E1rgp1C"
+      },
+      "source": [
+        "data.loc[(data[\"item_name\"]==\"Nantucket Nectar\") & (data['quantity']==2),[\"order_id\",\"quantity\",\"item_name\"]] "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rcnIkNcpgp9J"
+      },
+      "source": [
+        "data.iloc[[9]]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IrRXtGVvpciK"
+      },
+      "source": [
+        "data.iloc[:15]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nS_4_Um1p2E6"
+      },
+      "source": [
+        "data.iloc[:15, -2:]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KnFtekNRpul3"
+      },
+      "source": [
+        "data.iloc[:15, :-1]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u-wEvcx0qV9X"
+      },
+      "source": [
+        "### Step 3: Data Manipulation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n62nlGtwrdOP"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "*  \"b\": boolean\n",
+        "*  \"i\": (signed) integer\n",
+        "*  \"u\": unsigned ingteger\n",
+        "*  \"f\": floating-point\n",
+        "*  \"O\": Object\n",
+        "*  \"S\",\"a\": (byte-) String\n",
+        "*  \"U\": Unicode\n",
+        "*  \"V\": raw data (void)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rOdk83A4qSmd"
+      },
+      "source": [
+        "data['item_price'].dtype "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ou9391CusNy-"
+      },
+      "source": [
+        "**Apply()**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i2vLVejxsI_n"
+      },
+      "source": [
+        "# data['item_price'].apply(lambda x : x.replace(\"$\",\"\")) #dtype: object\n",
+        "\n",
+        "data['item_price'] = data['item_price'].apply(lambda x : float(x.replace(\"$\",\"\"))) "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z20VfNHPteuY"
+      },
+      "source": [
+        "data.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BvdLhq2wuFOj"
+      },
+      "source": [
+        "data[\"total_price\"] = data[\"quantity\"]*data['item_price']\n",
+        "data.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KJz5U_bYvAoa"
+      },
+      "source": [
+        "revenue = data[\"total_price\"].sum()\n",
+        "revenue"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XVljbi7sv2VG"
+      },
+      "source": [
+        "Which was the most-ordered item ?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xm6ECTkpwKMy"
+      },
+      "source": [
+        "## The Way 1: Groupby"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PPmqvJ5OvUgP"
+      },
+      "source": [
+        "item_ordered=data.groupby(\"item_name\")[\"quantity\"].sum()\n",
+        "item_ordered.sort_values(ascending= False).head()\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EnJYDoew5ZlP"
+      },
+      "source": [
+        "## The Way 2: Unique Value - counts() "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bp2WYcNAwdI0"
+      },
+      "source": [
+        "data['item_name'].value_counts()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GM86wriq56Rb"
+      },
+      "source": [
+        "data['item_name'].value_counts().count() #tổng số lượng được bán\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lynlI90d6Adq"
+      },
+      "source": [
+        "data['item_name'].nunique()"
       ],
       "execution_count": null,
       "outputs": []
